--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
                     <li class="social__item" id="dash"><a href="./src/admin/dashboard/dash.php" title="Quản trị"
                             class="social__icon"><i class="ri-settings-2-line"></i></a></li>
+                    <li class="social__item" id="menu-hidden-btn"><a style="cursor: pointer;" title="Thêm"
+                            class="social__icon"><i class="ri-align-justify"></i></a></li>
+                
 
 
                 </ul>
