--- a/login.html
+++ b/login.html
@@ -187,6 +187,7 @@
       .register-item {
         display: inline-flex;
         column-gap: 1rem;
+        width: 100%;
       }
 
       .mt-4 {
@@ -195,7 +196,7 @@
         height: 100px;
         background: none;
       }
-      .error {
+      #error,.error {
         color: crimson;
       }
     </style>
@@ -229,15 +230,15 @@
                 <input type="password" placeholder="Mật khẩu" />
                 <input type="submit" value="Đăng nhập" />
                 <div>
-                  <p class="error">không được để trống</p>
+                  <p class="error" >không được để trống</p>
                 </div>
                 <a href="./forgot-password-form.html">Quên mật khẩu</a> <br>
                 <a href="./index.html">Trang chủ</a>
 
             </form>
         </div>
-        <div class="register-show">
-            <form action="">
+        <div class="register-show" id="register-show">
+            <form action="login.html">
                 <h2>ĐĂNG KÝ</h2>
                 <input type="text" placeholder="Họ và tên" />
                 <div class="register-item">
@@ -260,7 +261,7 @@
                   <input type="password" placeholder="Xác nhận mật khẩu" />
                 </div>
                 <div>
-                  <p class="error">không được để trống</p>
+                  <p class="error-register" id="error">không được để trống</p>
                 </div>
                 <input type="submit" value="Đăng ký" />
 
@@ -271,35 +272,39 @@
   </body>
   <script>
     $(document).ready(function () {
-      $(".login-info-box").fadeOut();
-      $(".login-show").addClass("show-log-panel");
-    });
-
-    $('.login-reg-panel input[type="radio"]').on("change", function () {
-      if ($("#log-login-show").is(":checked")) {
+      if ($('#error').hasClass("error-register")) {
         $(".register-info-box").fadeOut();
         $(".login-info-box").fadeIn();
 
         $(".white-panel").addClass("right-log");
         $(".register-show").addClass("show-log-panel");
         $(".login-show").removeClass("show-log-panel");
-      } else if ($("#log-reg-show").is(":checked")) {
-        $(".register-info-box").fadeIn();
+      }
+      else {
         $(".login-info-box").fadeOut();
-
-        $(".white-panel").removeClass("right-log");
-
         $(".login-show").addClass("show-log-panel");
-        $(".register-show").removeClass("show-log-panel");
-      } else if ($("#forget-password").is(":checked")) {
-        $(".register-info-box").fadeIn();
-        $(".login-info-box").fadeOut();
 
-        $(".white-panel").removeClass("right-log");
-
-        $(".login-show").addClass("show-log-panel");
-        $(".register-show").removeClass("show-log-panel");
       }
     });
+
+    $( "#log-reg-show" ).click(function() {
+      $(".register-info-box").fadeIn();
+        $(".login-info-box").fadeOut();
+
+        $(".white-panel").removeClass("right-log");
+
+        $(".login-show").addClass("show-log-panel");
+        $(".register-show").removeClass("show-log-panel");
+    });
+
+    $( "#log-login-show" ).click(function() {
+      $(".register-info-box").fadeOut();
+        $(".login-info-box").fadeIn();
+
+        $(".white-panel").addClass("right-log");
+        $(".register-show").addClass("show-log-panel");
+        $(".login-show").removeClass("show-log-panel");
+    });
+
   </script>
 </html>
