--- a/news.html
+++ b/news.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="news__main-item">
                     <div class="item__header">
-                        <img src="./assets/img/slide3.jpg" alt="image">
+                        <img src="./assets/img/dong-ho-casio-la670.png" alt="image">
                     </div>
                     <div class="item__text">
                         <div class="item__text-date">
