add js for main menu active

--- a/about.html
+++ b/about.html
@@ -32,17 +32,18 @@
 <body>
     <header class="header header__product" id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
+            <a href="./index.html" class="nav__logo nav__link"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">giới thiệu</a></li>
-                    <li class="nav__item"><a href="/category.html" class="nav__link">đồng hồ nam</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ nữ</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ đôi</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">phụ kiện</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">tin tức</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">liên hệ</a></li>
+                    <li class="nav__item"><a href="./about.html" class="nav__link">giới thiệu</a></li>
+
+                    <li class="nav__item"><a href="./category.html?id=adwwd" class="nav__link">đồng hồ nam</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ nữ</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ đôi</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">phụ kiện</a></li>
+                    <li class="nav__item"><a href="./news.html" class="nav__link">tin tức</a></li>
+                    <li class="nav__item"><a href="./contact.html" class="nav__link">liên hệ</a></li>
                 </ul>
             </div>
 
@@ -237,8 +238,8 @@
     <!-- Back to top -->
     <button class="back-to-top" id="back-to-top" title="Back to top"><i class="ri-arrow-up-s-fill"></i></button>
     <!-- JS -->
-    <script src="./assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script src="./assets/js/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
