--- a/cart.html
+++ b/cart.html
@@ -27,17 +27,18 @@
 <body>
     <header class="header header__product" id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
+            <a href="./index.html" class="nav__logo nav__link"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">giới thiệu</a></li>
-                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ nam</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ nữ</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ đôi</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">phụ kiện</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">tin tức</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">liên hệ</a></li>
+                    <li class="nav__item"><a href="./about.html" class="nav__link">giới thiệu</a></li>
+
+                    <li class="nav__item"><a href="./category.html?id=adwwd" class="nav__link">đồng hồ nam</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ nữ</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ đôi</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">phụ kiện</a></li>
+                    <li class="nav__item"><a href="./news.html" class="nav__link">tin tức</a></li>
+                    <li class="nav__item"><a href="./contact.html" class="nav__link">liên hệ</a></li>
                 </ul>
             </div>
 
