--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="./about.html" class="nav__link">giới thiệu</a></li>
 
-                    <li class="nav__item"><a href="/category.html" class="nav__link">đồng hồ nam</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ nữ</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">đồng hồ đôi</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">phụ kiện</a></li>
+                    <li class="nav__item"><a href="./category.html?id=adwwd" class="nav__link">đồng hồ nam</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ nữ</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">đồng hồ đôi</a></li>
+                    <li class="nav__item"><a href="./category.html" class="nav__link">phụ kiện</a></li>
                     <li class="nav__item"><a href="./news.html" class="nav__link">tin tức</a></li>
                     <li class="nav__item"><a href="./contact.html" class="nav__link">liên hệ</a></li>
                 </ul>
@@ -63,7 +63,7 @@
                             </form>
                         </div>
                     </li>
-                    <li class="social__item"><a href="./cart.html" class="social__icon"><i class="ri-shopping-bag-line"
+                    <li class="social__item"><a href="./cart.html" class="social__icon nav__link"><i class="ri-shopping-bag-line"
                                 title="Giỏ hàng"></i></a></li>
 
                     <!-- Nếu đăng nhập thành công hiện ảnh ng dùng  -->
@@ -505,6 +505,7 @@
 
 
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="./assets/js/main.js"></script>
         <script>
             function showPassw() {
@@ -517,7 +518,6 @@
             }
         </script>
         <script src="./assets/js/swiper-bundle.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
         <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -530,6 +530,7 @@
                     x.type = "password";
                 }
             }
+
         </script>
         <script>
             var swiper = new Swiper(".mySwiper", {
