--- a/product_page.html
+++ b/product_page.html
@@ -9,10 +9,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- FAVICON -->
         <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
-    <link rel="manifest" href="./assets/favicon/site.webmanifest">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
+        <link rel="manifest" href="./assets/favicon/site.webmanifest">
         <!-- RECAPCHA -->
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <!-- css -->
@@ -33,7 +33,8 @@
 <body>
     <header class="header header__product" id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo nav__link"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
+            <a href="./index.html" class="nav__logo nav__link"><img class="nav__logo-img"
+                    src="./assets/img/logo_hkl.png" alt="logo"></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -121,7 +122,7 @@
                         <h2 class="product__price product__price-page">
                             <del>
                                 <span class="product-page__price-sale">
-                                    1.000.000  &#8363
+                                    1.000.000 &#8363
                                 </span>
                             </del>
                             1.000 &#8363
@@ -148,7 +149,8 @@
                         <div class="product__span">
                             <span class=product__ma-sp> Mã: mã sản phẩm</span> <br>
                             <span class="product__category"> Danh mục: danh mục</span> <br>
-                            <span class="product__category"> <i class="ri-eye-line" style="vertical-align: middle;"></i> Lượt xem: 0</span>
+                            <span class="product__category"> <i class="ri-eye-line" style="vertical-align: middle;"></i>
+                                Lượt xem: 0</span>
                         </div>
 
                     </div>
@@ -160,7 +162,8 @@
 
             <!-- TAB Comment, thong so, bao hanh -->
             <div class="tab tab__container">
-                <button class="tablinks" onclick="openCity(event, 'comment__container')" id="defaultOpen">bình luận</button>
+                <button class="tablinks" onclick="openCity(event, 'comment__container')" id="defaultOpen">bình
+                    luận</button>
                 <button class="tablinks" onclick="openCity(event, 'subinfo__container')">thông tin bổ sung</button>
                 <button class="tablinks" onclick="openCity(event, 'policy__container')">chính sách bảo hành</button>
             </div>
@@ -261,7 +264,7 @@
 
                 </div>
             </section>
-            
+
 
             <!-- policy container -->
             <section class="section comment__container tabcontent " id="policy__container">
