--- a/index.html
+++ b/index.html
@@ -423,19 +423,12 @@
             <h2 class="section__title">THÔNG TIN HỮU ÍCH</h2>
 
             <div class="news__container container" data-aos="fade-up-left" data-aos-duration="1000">
+                
                 <div class="news__content">
                     <div class="news__content-img">
-                        <img src="./assets/img/slide1.jpg" class="news__img" alt="">
+                        <img src="./assets/img/dong-ho-candino-c4433_3-nu-pin-day-inox.png" class="news__img" alt="">
                     </div>
-                    <a href="./news-item.html" class="news__title">Những mẫu đồng hồ dành cho công sở ...</a>
-                    <span class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Iusto eius ...</span>
-                </div>
-                <div class="news__content">
-                    <div class="news__content-img">
-                        <img src="./assets/img/slide2.jpg" class="news__img" alt="">
-                    </div>
-                    <a href="./news-item.html" class="news__title">Bộ sưu tập hoàng gia ...</a>
+                    <a href="./news-item.html" class="news__title">Bộ sưu tập hoàng gia ... Lorem ipsum dolor sit amet. 92384923742374983279</a>
                     <span class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         Iusto eius ...</span>
                 </div>
