--- a/payment.html
+++ b/payment.html
@@ -138,13 +138,13 @@
                             <input type="email" required style="padding-top:.5rem; padding-bottom: .5rem">
                             <label for="" style="color: black;">Hình thức thanh toán *</label>
 
-                            <div>
-                                <input type="radio" name="pay_method" id="">
+                            <div class="input-radio-style">
                                 <label for="" style="color: black;"> Trả tiền mặt khi nhận hàng</label>
-                            </div>
-                            <div>
                                 <input type="radio" name="pay_method" id="">
+                            </div>
+                            <div class="input-radio-style">
                                 <label for="" style="color: black;"> Chuyển khoản ngân hàng</label>
+                                <input type="radio" name="pay_method" id="">
                             </div>
                             <label for="" style="color: black;">Ghi chú đơn hàng *</label>
                             <textarea name="" id="" cols="15" rows="7" placeholder="Tin nhắn ..."
